--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         }
         nav a:hover { color: #111; }
 
-        /* Hero 核心區域 */
+        /* Hero 區域 */
         .hero {
             min-height: 100vh;
             display: flex;
@@ -44,15 +44,14 @@
             padding: 100px 20px 60px;
         }
 
-        /* 恢復圓形頭像排版 */
+        /* 圓形頭像 */
         .profile-pic {
             width: 120px;
             height: 120px;
-            border-radius: 50%; /* 圓形 */
+            border-radius: 50%;
             object-fit: cover;
             border: 1px solid #eee;
             margin-bottom: 30px;
-            /* 輕微浮動效果 */
             transition: 0.5s ease;
         }
         .profile-pic:hover {
@@ -68,15 +67,17 @@
             text-transform: uppercase;
         }
 
+        /* 修正後的副標題 */
         .hero p {
             font-size: 0.85rem;
             font-weight: 300;
             color: #aaa;
             letter-spacing: 0.2em;
             margin-bottom: 50px;
+            text-transform: uppercase;
         }
 
-        /* 按鈕組區塊 */
+        /* 按鈕組 */
         .btn-group {
             display: flex;
             flex-direction: column;
@@ -85,7 +86,7 @@
             max-width: 320px;
         }
 
-        /* 直角按鈕樣式 */
+        /* 直角按鈕 */
         .cta-btn {
             display: block;
             padding: 16px 20px;
@@ -133,7 +134,7 @@
         <img src="profile.png" alt="Kirsten" class="profile-pic">
         
         <h1>DESIGN WITH KIRSTEN</h1>
-        <p>UXUI DESIGN / NOTION / AI WORKFLOW</p>
+        <p>UXUI DESIGN ｜ AI TIPS ｜ TECH LIFESTYLE</p>
         
         <div class="btn-group">
             <a href="blog.html" class="cta-btn">在 Blog 看 UX & AI 學習筆記</a>
