--- a/index.html
+++ b/index.html
@@ -15,28 +15,14 @@
             margin: 0; color: #333; 
             overflow-x: hidden;
             display: flex;
-            justify-content: center;
-        }
-
-        /* 🎨 全長漸變垂直線設計 */
-        .vertical-line-bg {
-            position: absolute;
-            top: 0;
-            left: 50%;
-            transform: translateX(-50%);
-            width: 1px;
-            height: 45vh; /* 線條延伸到頁面約 45% 的高度 */
-            background: linear-gradient(to bottom, 
-                rgba(0,0,0,0) 0%, 
-                rgba(0,0,0,0.1) 20%, 
-                rgba(0,0,0,0.8) 100%);
-            z-index: 0;
+            flex-direction: column;
+            min-height: 100vh; /* 確保內容撐開整個頁面高度 */
         }
 
         /* 導覽列 */
         nav { 
             position: fixed; top: 0; left: 0; width: 100%; height: 75px; 
-            background: rgba(252, 252, 252, 0.6); 
+            background: rgba(252, 252, 252, 0.85); 
             backdrop-filter: blur(10px); -webkit-backdrop-filter: blur(10px);
             display: flex; align-items: center; justify-content: center; 
             border-bottom: 0.5px solid rgba(0,0,0,0.06); 
@@ -50,26 +36,32 @@
         }
         nav a:hover { color: #111; }
 
+        /* Hero 核心區域 */
         .hero {
-            min-height: 100vh;
+            flex-grow: 1; /* 讓 hero 區塊佔據剩餘空間 */
             display: flex;
             flex-direction: column;
-            justify-content: flex-end; /* 讓內容靠下方，與長線銜接 */
-            align-items: center;
+            justify-content: center; /* 垂直居中 */
+            align-items: center; /* 水平居中 */
             text-align: center;
-            padding-bottom: 12vh;
+            padding: 100px 20px 60px; /* 增加頂部 padding 避開 nav */
             position: relative;
             z-index: 1;
         }
 
+        /* 圓形頭像 */
         .profile-pic {
             width: 110px; height: 110px;
             border-radius: 50%;
             object-fit: cover;
-            border: 1px solid #fff;
-            box-shadow: 0 0 0 1px #eee;
+            border: 1px solid #eee;
             margin-bottom: 30px;
-            background: #fff;
+            transition: 0.5s cubic-bezier(0.165, 0.84, 0.44, 1);
+            background-color: #fff; /* 確保頭像背景是白色，更清爽 */
+        }
+        .profile-pic:hover {
+            transform: scale(1.05);
+            box-shadow: 0 5px 20px rgba(0,0,0,0.05); /* 微妙陰影 */
         }
 
         .hero h1 {
@@ -78,16 +70,20 @@
             letter-spacing: 0.4em;
             margin: 0 0 12px 0;
             color: #111;
+            text-transform: uppercase;
         }
 
+        /* 副標題 */
         .hero p {
             font-size: 0.8rem;
             font-weight: 300;
             color: #aaa;
             letter-spacing: 0.25em;
             margin-bottom: 50px;
+            text-transform: uppercase;
         }
 
+        /* 按鈕組 */
         .btn-group {
             display: flex;
             flex-direction: column;
@@ -96,6 +92,7 @@
             max-width: 320px;
         }
 
+        /* 直角按鈕樣式 */
         .cta-btn {
             display: block;
             padding: 16px 20px;
@@ -115,22 +112,24 @@
             transform: translateY(-2px);
         }
 
+        /* 頁尾 */
         footer {
-            position: absolute; bottom: 30px;
+            padding: 40px 0;
             text-align: center; font-size: 9px; color: #ccc;
             letter-spacing: 0.3em;
+            text-transform: uppercase;
+            margin-top: auto; /* 讓頁尾始終在底部 */
         }
 
         @media (max-width: 600px) {
             .hero h1 { font-size: 1.4rem; letter-spacing: 0.3em; }
-            .vertical-line-bg { height: 35vh; }
+            .profile-pic { width: 90px; height: 90px; margin-bottom: 25px;}
             .btn-group { max-width: 280px; }
+            .hero p { margin-bottom: 40px; }
         }
     </style>
 </head>
 <body>
-
-    <div class="vertical-line-bg"></div>
 
     <nav>
         <a href="index.html">Home</a>
